--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,10 @@ loader_version=0.14.19-babric.1-bta
 # HalpLibe
 halplibe_version=2.1.6
 
+prismatic_version=2.1.5
+legacyui_version=0.7.1
+
 # Mod
 mod_version=1.0.0
-mod_group=turniplabs
-mod_name=examplemod
+mod_group=permdog99
+mod_name=btlegacy-pixel-perfect
